--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name":        "ardus",
   "description": "An easy to use collection of nice features (all related to profiling for now)",
 	"keywords": [ "decorator" , "utility" , "profiling" ],
-  "version":     "0.3.0",
-	"repository": "https://github.com/bsgbryan/ardus",
+  "version":     "0.3.1",
+	"repository": "https://github.com/bsgbryan/Ardus",
   "author":      "Bryan Maynard <bsgbryan@gmail.com>",
   "main":        "./lib/ardus"
 }
