--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name":        "ardus",
-  "description": "An easy to use collection of nice features (all related to profiling for now)",
-	"keywords": [ "decorator" , "utility" , "profiling" ],
-  "version":     "0.3.1",
-	"repository": "https://github.com/bsgbryan/Ardus",
-  "author":      "Bryan Maynard <bsgbryan@gmail.com>",
-  "main":        "./lib/ardus"
+  "name"        : "ardus",
+  "description" : "An easy to use collection of nice features (all related to profiling for now)",
+	"keywords"    : [ "decorator" , "utility" , "profiling" ],
+  "version"     : "0.3.3",
+	"repository"  : "https://github.com/bsgbryan/Ardus",
+  "author"      : "Bryan Maynard <bsgbryan@gmail.com>",
+  "main"        : "./lib/ardus",
+  "bugs"        : { "url": "https://github.com/bsgbryan/Ardus/issues" }
 }
