--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name"         : "ardus",
   "description"  : "An easy to use collection of nice features (all related to profiling for now)",
 	"keywords"     : [ "decorator" , "utility" , "profiling" ],
-  "version"      : "0.4.0",
+  "version"      : "0.5.0",
+  "homepage"     : "https://github.com/bsgbryan/Ardus",
 	"repository"   : "https://github.com/bsgbryan/Ardus",
   "author"       : "Bryan Maynard <bsgbryan@gmail.com>",
   "main"         : "./lib/ardus",
