Added _ as a dev dependency. Added an _ example (with log output)

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name"         : "ardus",
   "description"  : "An easy to use collection of nice features (all related to profiling for now)",
 	"keywords"     : [ "decorator" , "utility" , "profiling" ],
-  "version"      : "0.5.4",
+  "version"      : "0.5.6",
   "homepage"     : "https://github.com/bsgbryan/Ardus",
 	"repository"   : "https://github.com/bsgbryan/Ardus",
   "author"       : "Bryan Maynard <bsgbryan@gmail.com>",
@@ -10,5 +10,5 @@
   "bugs"         : { "url": "https://github.com/bsgbryan/Ardus/issues" },
   "dependencies" : { "microtime" : "*" },
   
-  "devDependencies" : { "tap" : "*" }
+  "devDependencies" : { "tap" : "*" , "underscore" : "*" }
 }
